--- a/presentation/prelude.tex
+++ b/presentation/prelude.tex
@@ -22,6 +22,19 @@
 \addbibresource{references.bib}
 \usepackage[capitalise]{cleveref}
 
+\defbibenvironment{midbib}
+{\list
+	{}
+	{\setlength{\leftmargin}{\bibhang}%
+		\setlength{\itemindent}{-\leftmargin}%
+		\setlength{\itemsep}{\bibitemsep}%
+		\setlength{\parsep}{\bibparsep}}}
+{\endlist}
+{\item}
+
+\DeclareFieldFormat{labelnumberwidth}{}
+\setlength{\biblabelsep}{0pt}
+
 \hypersetup{
 	colorlinks,
 	citecolor=gray,
