--- a/presentation/references.bib
+++ b/presentation/references.bib
@@ -172,3 +172,48 @@
 	doi = "10.1007/978-3-030-99253-8\_9",
 	url = "https://doi.org/10.1007/978-3-030-99253-8_9",
 }
+
+@article{bsw-databases,
+	title = {A categorical approach to database semantics},
+	volume = {4},
+	DOI = {10.1017/S0960129500000426},
+	number = {2},
+	journal = {Mathematical Structures in Computer Science},
+	publisher = {Cambridge University Press},
+	author = {Baclawski, Kenneth and Simovici, Dan and White, William},
+	year = {1994},
+	pages = {147–183},
+}
+
+@misc{cruttwell,
+	title = {Categorical Foundations of Gradient-Based Learning},
+	author = {G. S. H. Cruttwell and Bruno Gavranović and Neil Ghani and Paul
+	          Wilson and Fabio Zanasi},
+	year = {2021},
+	eprint = {2103.01931},
+	archivePrefix = {arXiv},
+	primaryClass = {cs.LG},
+}
+
+@inproceedings{healy,
+	author = {Healy, M.J. and Caudell, T.P.},
+	booktitle = {IJCNN'01. International Joint Conference on Neural Networks.
+	             Proceedings (Cat. No.01CH37222)},
+	title = {A categorical semantic analysis of ART architectures},
+	year = {2001},
+	volume = {1},
+	number = {},
+	pages = {38-43 vol.1},
+	doi = {10.1109/IJCNN.2001.938988},
+}
+
+
+@misc{aguado,
+	title = {Category Theory for Autonomous Robots: The Marathon 2 Use Case},
+	author = {Esther Aguado and Virgilio Gómez and Miguel Hernando and Claudio
+	          Rossi and Ricardo Sanz},
+	year = {2023},
+	eprint = {2303.01152},
+	archivePrefix = {arXiv},
+	primaryClass = {cs.RO},
+}
