--- a/writeup/prelude.tex
+++ b/writeup/prelude.tex
@@ -39,8 +39,8 @@
 \usepackage{subcaption}
 \usepackage{mathpartir}
 \usepackage{adjustbox}
-% string diagram
-\usepackage{string-diagrams}
+% diagrams
+\input{diagrams.tex}
 
 % formatting
 \usepackage{enumitem}
