--- a/writeup/references.bib
+++ b/writeup/references.bib
@@ -329,6 +329,52 @@
 	            composition, Security modeling, specification, and analysis},
 }
 
-	  
+@book{pierce-1991,
+	author = {Pierce, Benjamin C.},
+	title = "{Basic Category Theory for Computer Scientists}",
+	publisher = {The MIT Press},
+	year = {1991},
+	month = {08},
+	abstract = "{Basic Category Theory for Computer Scientists provides a
+	            straightforward presentation of the basic constructions and
+	            terminology of category theory, including limits, functors, natural
+	            transformations, adjoints, and cartesian closed categories.Category
+	            theory is a branch of pure mathematics that is becoming an
+	            increasingly important tool in theoretical computer science,
+	            especially in programming language semantics, domain theory, and
+	            concurrency, where it is already a standard language of discourse.
+	            Assuming a minimum of mathematical preparation, Basic Category
+	            Theory for Computer Scientists provides a straightforward
+	            presentation of the basic constructions and terminology of category
+	            theory, including limits, functors, natural transformations,
+	            adjoints, and cartesian closed categories. Four case studies
+	            illustrate applications of category theory to programming language
+	            design, semantics, and the solution of recursive domain equations.
+	            A brief literature survey offers suggestions for further study in
+	            more advanced texts. Contents Tutorial • Applications • Further
+	            Reading}",
+	isbn = {9780262288460},
+	doi = {10.7551/mitpress/1524.001.0001},
+	url = {https://doi.org/10.7551/mitpress/1524.001.0001},
+}
 
+
+	@book{barr-wells-1990,
+	author = {Barr, Michael and Wells, Charles},
+	title = {Category theory for computing science},
+	year = {1990},
+	isbn = {0131204866},
+	publisher = {Prentice-Hall, Inc.},
+	address = {USA},
+}
+
+@book{jacobs-1999,
+	AUTHOR = "B. Jacobs",
+	TITLE = "Categorical Logic and Type Theory",
+	PUBLISHER = "North Holland",
+	ADDRESS = "Amsterdam",
+	SERIES = "Studies in Logic and the Foundations of Mathematics",
+	NUMBER = "141",
+	YEAR = "1999",
+}
 
