--- a/writeup/references.bib
+++ b/writeup/references.bib
@@ -378,3 +378,32 @@
 	YEAR = "1999",
 }
 
+
+@book{simmons-2011,
+	author = {Simmons, Harold},
+	title = {An Introduction to Category Theory},
+	year = {2011},
+	isbn = {0521283043},
+	publisher = {Cambridge University Press},
+	address = {USA},
+	abstract = {Category theory provides a general conceptual framework that has
+	            proved fruitful in subjects as diverse as geometry, topology,
+	            theoretical computer science and foundational mathematics. Here is
+	            a friendly, easy-to-read textbook that explains the fundamentals at
+	            a level suitable for newcomers to the subject. Beginning
+	            postgraduate mathematicians will find this book an excellent
+	            introduction to all of the basics of category theory. It gives the
+	            basic definitions; goes through the various associated gadgetry,
+	            such as functors, natural transformations, limits and colimits; and
+	            then explains adjunctions. The material is slowly developed using
+	            many examples and illustrations to illuminate the concepts
+	            explained. Over 200 exercises, with solutions available online,
+	            help the reader to access the subject and make the book ideal for
+	            self-study. It can also be used as a recommended text for a taught
+	            introductory course.},
+}
+
+  
+
+
+
