--- a/writeup/category-theory.tex
+++ b/writeup/category-theory.tex
@@ -54,21 +54,38 @@ science where possible\footnote{
 	\end{fig}
 \end{dfn}
 
+\begin{ntn}
+  In addition to those used above, many syntaxes are common for basic
+  categorical notions. \begin{itemize}
+    \item A morphism $f\in\cat{C}(x, y)$ is often written $f\colon x\to y$ or $x\xto{f} y$; $x$ is
+      called its \emph{domain} or \emph{source} and $y$ is called it \emph{codomain}
+      or \emph{target}.
+    \item Morphisms may be called maps, arrows, or homomorphisms; the class of morphisms $\cat{C}(x, y)$ may also be written
+      $\Hom_{\cat{C}}(x, y)$ or just $\Hom(x, y)$.
+    \item Composition is written $gf$ or $g\circ f$, or sometimes in the left-to-right
+      order $fg$.
+    \item Identities are written $1_x$, $\id_x$, or just $x$ where the context
+      is clear\footnote{I agree
+      with Harold Simmons, who says that this last is ``a notation so ridiculous
+      it should be laughed at in the street''~\cite[p. 5]{simmons-2011}.}.
+    \end{itemize}
+\end{ntn}
+
 \begin{ex}[Functional Programming Languages]\label{ex:functional programming}
-  Consider some strongly-typed functional programming language $\cL$, whose functions
-  are never side-effecting. Then under very modest assumptions about $\cL$, we
-  can make a category $\cC(\cL)$, as follows:
+  Consider some strongly-typed functional programming language $L$, whose functions
+  are never side-effecting. Then under very modest assumptions about $L$, we
+  can make a category $\cat{L}$, as follows:
   \begin{itemize}
-    \item the objects of $\cC(\cL)$ are the types in $\cL$;
-    \item the morphisms $\cC(\cL)(A, B)$ are the functions of type $A\to B$;
+    \item the objects of $\cat{L}$ are the types of $L$;
+    \item the morphisms $\cat{L}(A, B)$ are the functions of type $A\to B$;
     \item the identities $1_A$ are the identity functions $\lambda (x: A).x$;
     \item composition of morphisms are the usual function composition.
   \end{itemize}
 
-  If $\cL$ is truly non-side-effecting, then it's straightforward to check
+  If $L$ is truly non-side-effecting, then it's straightforward to check
   that this construction does indeed satisfy the axioms of a category; see for
   instance~\cite[Section 2.2]{barr-wells-1990} to see the necessary assumptions
-  spelled out.
+  spelled out rigorously.
 \end{ex}
 
 \noindent
